# toolproof

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test_ci.sh  test_interactive.sh
.backstage/: changelog.cjs  create_package.cjs  set_version.cjs  version.cjs  version_main_package.cjs
.cloudcannon/: prebuild
.github/: dependabot.yml
toolproof/: Cargo.toml
toolproof/src/: civilization.rs  errors.rs  interactive.rs  logging.rs  main.rs  options.rs  parser.rs  platforms.rs  runner.rs  segments.rs  snapshot_writer.rs  universe.rs
toolproof/src/definitions/: mod.rs
toolproof/src/definitions/assertions/: mod.rs
toolproof/src/definitions/browser/: browser_specific.rs  harness.js  init.js  mod.rs
toolproof/src/definitions/filesystem/: mod.rs
toolproof/src/definitions/hosting/: mod.rs
toolproof/src/definitions/process/: mod.rs
toolproof/test_suite/base/: default_placeholders.toolproof.yml  extract.toolproof.yml  file_contains.toolproof.yml  run_one.toolproof.yml  snapshot.toolproof.yml  snapshot_file.toolproof.yml  snapshot_update.toolproof.yml  stdout.toolproof.yml  step_platforms.toolproof.yml  summary_mixed_failures.toolproof.yml  summary_multiple_failures.toolproof.yml  test_platforms.toolproof.yml
toolproof/test_suite/browser/: asserts.toolproof.yml  click.toolproof.yml  logs.toolproof.yml  screenshot.toolproof.yml  selectors.toolproof.yml  serve_twice.toolproof.yml  snapshot.toolproof.yml  wait_for.toolproof.yml
toolproof/test_suite/hooks/: before_all.toolproof.yml  macros.toolproof.yml
toolproof/test_suite/refs/: ref-file.toolproof.yml
(+36 files in other folders)
